# gmc_arm

./: CMakeLists.txt  README.md
config/: gmc.ini
include/: SparseOptFlow.h
include/opencv2/: cvconfig.h  opencv_modules.hpp
src/: SparseOptFlow_GMC.cpp  main.cpp
